# PLINKLiftOver

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  LICENSE  Makefile  README.md  SECURITY.md  cookiecutter-config-file.yml  pyproject.toml  ruff.toml  setup.cfg
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: question.md
.github/workflows/: build.yml  greetings.yml  release-drafter.yml
docker/: Dockerfile  README.md
src/plinkliftover/: __init__.py  __main__.py  bed2map.py  liftover.py  logger.py  logging.py  map2bed.py  utils.py
tests/: test_map2bed.py
