[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "plinkliftover"
version = "0.5.2"
description = "Converts genotype data stored in plink's PED+MAP format from one genome build to another, using liftOver"
readme = "README.md"
requires-python = ">=3.10"
keywords = []
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "better_exceptions",
    "joblib ==1.3.1",
    "loguru ==0.7.0",
    "psutil ==5.9.5",
    "rich ==13.9.4",
    "tqdm ==4.65.0",
    "typer ==0.9.0",
]

[[project.authors]]
name = "Miles Smith"
email = "miles-smith@omrf.org"

[project.urls]
repository = "https://github.com/milescsmith/plinkliftover"
homepage = "https://github.com/milescsmith/plinkliftover"

[project.scripts]
plinkliftover = "plinkliftover.__main__:app"
map2bed = "plinkliftover.map2bed:map2bedapp"
bed2map = "plinkliftover.bed2map:bed2mapapp"

[project.optional-dependencies]
dev = [
    "black ==23.7.0",
    "mypy ==1.5.1",
    "nox ==2023.4.22",
    "pytest ==7.4.0",
    "ruff ==0.0.287",
]

[tool.isort]
known_typing = "typing,types,typing_extensions,mypy,mypy_extensions"
sections = "FUTURE,TYPING,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
include_trailing_comma = true
default_section = "FIRSTPARTY"
multi_line_output = 3
indent = 4
force_grid_wrap = 0
use_parentheses = true
line_length = 80

[tool.hatch.build.targets.wheel]
packages = ["src/plinkliftover"]

[tool.black]
line-length = 120
target-version = ["py310"]
skip-string-normalization = true

[tool.ruff]
target-version = "py310"
line-length = 120
select = [
    "A",
    "ARG",
    "B",
    "C",
    "DTZ",
    "E",
    "EM",
    "F",
    "FBT",
    "I",
    "I001",
    "ICN",
    "ISC",
    "N",
    "PLC",
    "PLE",
    "PLR",
    "PLW",
    "Q",
    "RUF",
    "S",
    "T",
    "TID",
    "UP",
    "W",
    "YTT",
]
ignore = [
    "B027",
    "FBT003",
    "S105",
    "S106",
    "S107",
    "C901",
    "PLR0911",
    "PLR0912",
    "PLR0913",
    "PLR0915",
]
unfixable = [
    "F401",
    "UP007",
]
exclude = [
    ".git",
    ".hg",
    "__pycache__",
    "_bin/*",
    "_build/*",
    "_ig_fbcode_wheel/*",
    "buck-out/*",
    "third-party-buck/*",
    "third-party2/*",
    "dist",
    ".venv",
    ".nox",
    ".mypy_cache",
    ".pytype",
    ".svn",
    "__pypackages__",
]
src = ["src"]

[tool.ruff.mccabe]
max-complexity = 50

[tool.ruff.isort]
known-first-party = ["readcounts"]

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"
