[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "plinkliftover"
version = "0.6.1"
description = "Converts genotype data stored in plink's PED+MAP format from one genome build to another, using liftOver"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Miles Smith", email = "miles-smith@omrf.org" }
]
keywords = []
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "joblib>=1.5.1",
    "loguru>=0.7.3",
    "rich>=14.0.0",
    "tqdm>=4.67.1",
    "typer>=0.16.0",
]


[project.urls]
repository = "https://github.com/milescsmith/plinkliftover"
homepage = "https://github.com/milescsmith/plinkliftover"

[project.scripts]
plinkliftover = "plinkliftover.__main__:app"
map2bed = "plinkliftover.map2bed:map2bedapp"
bed2map = "plinkliftover.bed2map:bed2mapapp"

[dependency-groups]
dev = [
    "nox>=2025.5.1",
    "pytest>=8.4.1",
    "ruff>=0.12.3",
    "ty>=0.0.1a14",
]

[tool.hatch.build.targets.wheel]
packages = ["src/plinkliftover"]